--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,12 @@ name: Production Build
 on:
   workflow_dispatch:
     inputs:
-      name:
-        description: "Release-Build"
-        default: "Generate a release build"
+      release_version:
+        description: 'The version name for the release (e.g., 1.0.0)'
+        required: true
+      release_notes:
+        description: 'Release notes for this version'
+        required: false
 
 jobs:
   build:
@@ -12,43 +15,45 @@ jobs:
 
     steps:
       - name: Checking out branch
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 17
+          cache: gradle
 
       - name: Setup Android SDK
-        uses: android-actions/setup-android@v2.0.10
+        uses: android-actions/setup-android@v3.2.2
 
-      # This will decode the keystore from base 64 text representation that we have stored in secrets
-      # and generates and keystore file and gets stored in /android-app path
-      - name: Decode Keystore
+      - name: Build the APK
         env:
-          ENCODED_STRING: ${{ secrets.KEYSTORE_BASE_64 }}
-          RELEASE_KEYSTORE_PASSWORD: ${{ secrets.RELEASE_KEYSTORE_PASSWORD }}
-          RELEASE_KEYSTORE_ALIAS: ${{ secrets.RELEASE_KEYSTORE_ALIAS }}
-          RELEASE_KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}
-
+          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE_64 }}
+          KEYSTORE_PASSWORD: ${{ secrets.RELEASE_KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.RELEASE_KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}
         run: |
-          echo $ENCODED_STRING > keystore-b64.txt
-          base64 -d keystore-b64.txt > keystore.jks
+          echo $KEYSTORE_BASE64 | base64 -d  > keystore.jks
+          ./gradlew --no-daemon assembleRelease
 
-      - name: Build Release APK
-        env:
-          RELEASE_KEYSTORE_PASSWORD: ${{ secrets.RELEASE_KEYSTORE_PASSWORD }}
-          RELEASE_KEYSTORE_ALIAS: ${{ secrets.RELEASE_KEYSTORE_ALIAS }}
-          RELEASE_KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}
-        run: ./gradlew assembleRelease --stacktrace
+      - name: Rename the APK
+        run:
+          mv app/build/outputs/apk/release/app-release.apk timeline_v${{ github.event.inputs.release_version }}.apk
 
-      - name: Get release file apk path
-        id: releaseApk
-        run: echo "apkfile=$(find app/build/outputs/apk/release/*.apk)" >> $GITHUB_OUTPUT
-
-      - name: Upload Release Build to Artifacts
-        uses: actions/upload-artifact@v3
+      - name: Upload APK to Release
+        if: success()
+        uses: ncipollo/release-action@v1
         with:
-           name: release-artifacts
-           path: ${{ steps.releaseApk.outputs.apkfile }}
+          tag: "v${{ github.event.inputs.release_version }}"
+          name: "Release v${{ github.event.inputs.release_version }}"
+          body: ${{ github.event.inputs.release_notes }}
+          draft: false
+          prerelease: false
+          artifacts:
+            timeline_v${{ github.event.inputs.release_version }}.apk
+
+
+
